grafana/grafana.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    k8s-app: grafana
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  serviceName: "grafana"
  template:
    metadata:
      labels:
        k8s-app: grafana
    spec:
      containers:
      - image: grafana/grafana:latest
        imagePullPolicy: Always
        name: grafana
        volumeMounts:
          - mountPath: "/var/lib/grafana"
            name: grafana-data
        readinessProbe:
          httpGet:
            path: /login
            port: 3000
      restartPolicy: Always
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
