grafana/grafana-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    k8s-app: grafana
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    k8s-app: grafana
  type: ClusterIP
